fix: alignment of form element

--- a/src/Components/Home/Form/Form.css
+++ b/src/Components/Home/Form/Form.css
@@ -1,5 +1,5 @@
 .form-field{
-    display: flex;
+    /* display: flex; */
 }
 
 input {
